<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/reader_read_item"
        android:icon="@drawable/bottombar_scan_sel"
        android:title="@string/inventory_tag_text" />

    <item
        android:id="@+id/reader_writelock_item"
        android:icon="@drawable/bottombar_edit_sel"
        android:title="@string/write_lock_tag_text" />
    <item
        android:id="@+id/reader_locate_item"
        android:icon="@drawable/bottombar_locate_sel"
        android:title="@string/locate_tag_text" />
    <item
        android:id="@+id/reader_setting_item"
        android:icon="@drawable/bottombar_setting_sel"
        android:title="@string/settings_text" />
</menu>