<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.writelock.WriteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btns"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_selectd_tag_epc">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtv_tag_epc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789abcdefABCDEF" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/memory_bank" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_bank"
                style="@style/common_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/bank_arr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_start_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtv_start_addr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_block_count">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtv_block_cnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/access_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtv_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789abcdefABCDEF"
                    android:maxLength="8" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkbox_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_data"
            app:counterEnabled="true"
            app:counterMaxLength="24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtv_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789abcdefABCDEF" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/introduction_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/introduction_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_read"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_tx_read" />

        <Button
            android:id="@+id/btn_write"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_tx_write" />
    </LinearLayout>
</RelativeLayout>